k8s/00-namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry-search
  labels:
    app.kubernetes.io/name: telemetry-search
